app/src/main/java/drz/oddb/parse/parse.java
/* parse.java */
/* Generated By:JavaCC: Do not edit this line. parse.java */
package drz.oddb.parse;
import java.util.*;
public class parse implements parseConstants {

    public static final int OPT_CREATE_ORIGINCLASS    = 1;
    public static final int OPT_CREATE_SELECTDEPUTY   = 2;
    public static final int OPT_DROP                  = 3;
    public static final int OPT_INSERT                = 4;
    public static final int OPT_DELETE                = 5;
    public static final int OPT_SELECT_DERECTSELECT   = 6;
    public static final int OPT_SELECT_INDERECTSELECT = 7;
    public static final int OPT_CREATE_UPDATE         = 8;
    public static final int OPT_CREATE_UNIONDEPUTY    = 9;

    static Queue<String> st= new LinkedList<String>(); ;
    public static void main(String args[]) throws ParseException {
        parse parser = new parse(System.in);
        parser.Run();
    }

  final public String[] Run() throws ParseException {
    trace_call("Run");
    try {
String[] s;
      s = sql();
//System.out.println(s+"\n");
    {if ("" != null) return s ;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Run");
    }
}

  final public String[] sql() throws ParseException {
    trace_call("sql");
    try {
String sql_s;
        String create_s;
        String drop_s;
        String select_s;
        String insert_s;
        String delete_s;
        String update_s;
      if (jj_2_1(3)) {
        create_s = create();
sql_s = create_s;System.out.println(sql_s+"\n");{if ("" != null) return sql_s.split(",");}
      } else if (jj_2_2(3)) {
        drop_s = drop();
sql_s = drop_s;System.out.println(sql_s+"\n");{if ("" != null) return sql_s.split(",");}
      } else if (jj_2_3(3)) {
        select_s = select();
sql_s = select_s;System.out.println(sql_s+"\n");{if ("" != null) return sql_s.split(",");}
      } else if (jj_2_4(3)) {
        insert_s = insert2();
sql_s = insert_s;System.out.println(sql_s+"\n");{if ("" != null) return sql_s.split(",");}
      } else if (jj_2_5(3)) {
        delete_s = delete();
sql_s = delete_s;System.out.println(sql_s+"\n");{if ("" != null) return sql_s.split(",");}
      } else if (jj_2_6(3)) {
        update_s = update();
sql_s = update_s;System.out.println(sql_s+"\n");{if ("" != null) return sql_s.split(",");}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("sql");
    }
}

  final public String create() throws ParseException {
    trace_call("create");
    try {
String create_s;
        int count;
        int[] cnt;
      if (jj_2_7(3)) {
        jj_consume_token(CREATE);
        count = originclass();
        jj_consume_token(SEMICOLON);
create_s = OPT_CREATE_ORIGINCLASS+",";
      create_s += count;
      while(!st.isEmpty())
      {
        create_s +=",";
        create_s += st.poll();

      }
      {if ("" != null) return create_s;}
      } else if (jj_2_8(3)) {
        jj_consume_token(CREATE);
        count = selectdeputy();
        jj_consume_token(SEMICOLON);
create_s = OPT_CREATE_SELECTDEPUTY+",";
        create_s += count;
        while(!st.isEmpty())
        {
            create_s +=",";
            create_s += st.poll();
        }
        {if ("" != null) return create_s;}
      } else if (jj_2_9(3)) {
        jj_consume_token(CREATE);
        cnt = uniondeputy();
        jj_consume_token(SEMICOLON);
create_s = OPT_CREATE_UNIONDEPUTY+",";
        create_s += cnt[0];
        create_s += ",";
        create_s += cnt[1];
        while(!st.isEmpty()){
            create_s += ",";
            create_s += st.poll();
        }
        {if ("" != null) return create_s;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("create");
    }
}

  final public String drop() throws ParseException {
    trace_call("drop");
    try {
String cln;
        String drop_s;
      jj_consume_token(DROP);
      jj_consume_token(CLASS);
      cln = classname();
      jj_consume_token(SEMICOLON);
drop_s = OPT_DROP+","+cln;{if ("" != null) return drop_s;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("drop");
    }
}

  final public String insert2() throws ParseException {
    trace_call("insert2");
    try {
String insert_s;
        int count;
      count = insert();
insert_s = OPT_INSERT+",";
      insert_s += count;
      while(!st.isEmpty())
      {
        insert_s +=",";
        insert_s += st.poll();

      }
      {if ("" != null) return insert_s;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("insert2");
    }
}

  final public int insert() throws ParseException {
    trace_call("insert");
    try {
String cln;
        String vl;
        int count = 0;
      jj_consume_token(INSERT);
      jj_consume_token(INTO);
      cln = classname();
st.add(cln);
      jj_consume_token(VALUES);
      jj_consume_token(LEFT_BRACKET);
      vl = value();
count++;st.add(vl);
      label_1:
      while (true) {
        if (jj_2_10(3)) {
          ;
        } else {
          break label_1;
        }
        jj_consume_token(COMMA);
        vl = value();
count++;st.add(vl);
      }
      jj_consume_token(RIGHT_BRACKET);
      jj_consume_token(SEMICOLON);
{if ("" != null) return count;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("insert");
    }
}

  final public String delete() throws ParseException {
    trace_call("delete");
    try {
String cln;
        String delete_s;
        String cond;
      jj_consume_token(DELETE);
delete_s = OPT_DELETE+",";
      jj_consume_token(FROM);
      cln = classname();
delete_s += cln+",";
      jj_consume_token(WHERE);
      cond = condition();
delete_s += cond;
      jj_consume_token(SEMICOLON);
{if ("" != null) return delete_s;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("delete");
    }
}

  final public String select() throws ParseException {
    trace_call("select");
    try {
String select_s;
        int count;
      if (jj_2_11(3)) {
        jj_consume_token(SELECT);
        count = directselect();
        jj_consume_token(SEMICOLON);
select_s = OPT_SELECT_DERECTSELECT+",";
      select_s += count;
      while(!st.isEmpty())
      {
        select_s +=",";
        select_s += st.poll();

      }
      {if ("" != null) return select_s;}
      } else if (jj_2_12(3)) {
        jj_consume_token(SELECT);
        count = indirectselect();
        jj_consume_token(SEMICOLON);
select_s = OPT_SELECT_INDERECTSELECT+",";
      select_s += count;
      while(!st.isEmpty())
      {
        select_s +=",";
        select_s += st.poll();

      }
      {if ("" != null) return select_s;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("select");
    }
}

  final public int originclass() throws ParseException {
    trace_call("originclass");
    try {
String cln;
        String attr_s;
        String attrtype_s;
        int count = 0;
      jj_consume_token(CLASS);
      cln = classname();
st.add(cln);
      jj_consume_token(LEFT_BRACKET);
      attr_s = attr();
st.add(attr_s);
      attrtype_s = attrtype();
st.add(attrtype_s); count++;
      label_2:
      while (true) {
        if (jj_2_13(3)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(COMMA);
        attr_s = attr();
st.add(attr_s);
        attrtype_s = attrtype();
st.add(attrtype_s); count++;
      }
      jj_consume_token(RIGHT_BRACKET);
{if ("" != null) return count;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("originclass");
    }
}

  final public int selectdeputy() throws ParseException {
    trace_call("selectdeputy");
    try {
String cln;
        int count;
      jj_consume_token(SELECTDEPUTY);
      cln = classname();
st.add(cln);
      jj_consume_token(SELECT);
      count = directselect();
{if ("" != null) return count;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("selectdeputy");
    }
}

/****************************************************************/
  final public int[] uniondeputy() throws ParseException {
    trace_call("uniondeputy");
    try {
String cln;
    int[] cnt;
      jj_consume_token(UNIONDEPUTY);
      cln = classname();
st.add(cln);
      cnt = unionselect();
{if ("" != null) return cnt;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("uniondeputy");
    }
}

  final public int[] unionselect() throws ParseException {
    trace_call("unionselect");
    try {
int[] cnt = new int[2];
    int select_cnt = 0;
    int attr_cnt = 0;
    int attr_cnt_tmp = 0;
      jj_consume_token(SELECT);
select_cnt += 1;
      attr_cnt = directselect();
      label_3:
      while (true) {
        jj_consume_token(UNION);
        jj_consume_token(SELECT);
        attr_cnt_tmp = directselect();
select_cnt += 1;
            if(attr_cnt != attr_cnt_tmp){
                {if (true) throw new RuntimeException("UNION\u64cd\u4f5c\u5c5e\u6027\u6570\u91cf\u4e0d\u4e00\u81f4\uff01");}
            }
        if (jj_2_14(3)) {
          ;
        } else {
          break label_3;
        }
      }
cnt[0] = select_cnt;
        cnt[1] = attr_cnt;
        {if ("" != null) return cnt;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("unionselect");
    }
}

/****************************************************************/
  final public String classname() throws ParseException {
    trace_call("classname");
    try {
Token s;
      s = jj_consume_token(ID);
{if ("" != null) return s.image;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("classname");
    }
}

  final public String attrtype() throws ParseException {
    trace_call("attrtype");
    try {
Token s;
      s = jj_consume_token(ID);
{if ("" != null) return s.image;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("attrtype");
    }
}

  final public String attr() throws ParseException {
    trace_call("attr");
    try {
Token s;
      s = jj_consume_token(ID);
{if ("" != null) return s.image;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("attr");
    }
}

  final public String dattr() throws ParseException {
    trace_call("dattr");
    try {
Token s;
      s = jj_consume_token(ID);
{if ("" != null) return s.image;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("dattr");
    }
}

  final public String condition() throws ParseException {
    trace_call("condition");
    try {
String attr_s;
        String cond;
        Token s;
      if (jj_2_15(3)) {
        attr_s = attr();
        jj_consume_token(EQUAL);
        s = jj_consume_token(INT);
cond = attr_s+",=,"+s.image; {if ("" != null) return cond;}
      } else if (jj_2_16(3)) {
        attr_s = attr();
        jj_consume_token(EQUAL);
        s = jj_consume_token(STRING);
cond = attr_s+",=,"+s.image; {if ("" != null) return cond;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("condition");
    }
}

  final public String value() throws ParseException {
    trace_call("value");
    try {
Token s;
      if (jj_2_17(3)) {
        s = jj_consume_token(INT);
{if ("" != null) return s.image;}
      } else if (jj_2_18(3)) {
        s = jj_consume_token(STRING);
{if ("" != null) return s.image;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("value");
    }
}

  final public int directselect() throws ParseException {
    trace_call("directselect");
    try {
String dattr_s;
        String attr_s;
        String value_s = "";
        boolean plus = false;
        String cln;
        String cond;
        int count = 0;
      attr_s = attr();
st.add(attr_s);count++;
      if (jj_2_19(3)) {
        jj_consume_token(PLUS);
        value_s = value();
plus = true;
      } else {
        ;
      }
if(plus) { st.add("1"); st.add(value_s);}else {st.add("0"); st.add("0"); } plus = false; dattr_s = attr_s;
      if (jj_2_20(3)) {
        jj_consume_token(AS);
dattr_s = dattr();
      } else {
        ;
      }
st.add(dattr_s);
      label_4:
      while (true) {
        if (jj_2_21(3)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(COMMA);
        attr_s = attr();
st.add(attr_s);count++;
        if (jj_2_22(3)) {
          jj_consume_token(PLUS);
          value_s = value();
plus = true;
        } else {
          ;
        }
if(plus) { st.add("1"); st.add(value_s);}else {st.add("0"); st.add("0"); } plus = false; dattr_s = attr_s;
        if (jj_2_23(3)) {
          jj_consume_token(AS);
dattr_s = dattr();
        } else {
          ;
        }
st.add(dattr_s);
      }
      jj_consume_token(FROM);
      cln = classname();
st.add(cln);
      jj_consume_token(WHERE);
      cond = condition();
st.add(cond);{if ("" != null) return count;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("directselect");
    }
}

  final public int indirectselect() throws ParseException {
    trace_call("indirectselect");
    try {
String cln;
        int count = 0;
        String attr_s;
        String cond;
      cln = classname();
st.add(cln);count++;
      label_5:
      while (true) {
        if (jj_2_24(3)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(CROSS);
        cln = classname();
st.add(cln);count++;
      }
      jj_consume_token(DOT);
      attr_s = attr();
st.add(attr_s);
      jj_consume_token(FROM);
      cln = classname();
st.add(cln);
      jj_consume_token(WHERE);
      cond = condition();
st.add(cond); {if ("" != null) return count;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("indirectselect");
    }
}

  final public String update() throws ParseException {
    trace_call("update");
    try {
String cln;
        String value_s;
        String attr_s;
        String cond;
        String update_s;
      jj_consume_token(UPDATE);
update_s = OPT_CREATE_UPDATE+",";
      cln = classname();
update_s += cln + ",";
      jj_consume_token(SET);
      attr_s = attr();
update_s += attr_s+",";
      jj_consume_token(EQUAL);
      value_s = value();
update_s += value_s+",";
      jj_consume_token(WHERE);
      cond = condition();
update_s += cond;
      jj_consume_token(SEMICOLON);
{if ("" != null) return update_s;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("update");
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_3R_uniondeputy_278_5_14()
 {
    if (jj_scan_token(UNIONDEPUTY)) return true;
    if (jj_3R_classname_312_4_20()) return true;
    return false;
  }

  private boolean jj_3_19()
 {
    if (jj_scan_token(PLUS)) return true;
    if (jj_3R_value_354_5_15()) return true;
    return false;
  }

  private boolean jj_3R_directselect_370_5_16()
 {
    if (jj_3R_attr_326_4_18()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_19()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_3_20()) jj_scanpos = xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_21()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(FROM)) return true;
    return false;
  }

  private boolean jj_3R_selectdeputy_269_5_13()
 {
    if (jj_scan_token(SELECTDEPUTY)) return true;
    if (jj_3R_classname_312_4_20()) return true;
    return false;
  }

  private boolean jj_3R_insert2_164_9_9()
 {
    if (jj_3R_insert_185_5_21()) return true;
    return false;
  }

  private boolean jj_3_18()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_17()
 {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  private boolean jj_3R_value_354_5_15()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_17()) {
    jj_scanpos = xsp;
    if (jj_3_18()) return true;
    }
    return false;
  }

  private boolean jj_3_13()
 {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_attr_326_4_18()) return true;
    if (jj_3R_attrtype_319_4_19()) return true;
    return false;
  }

  private boolean jj_3R_originclass_252_5_12()
 {
    if (jj_scan_token(CLASS)) return true;
    if (jj_3R_classname_312_4_20()) return true;
    return false;
  }

  private boolean jj_3R_drop_156_5_7()
 {
    if (jj_scan_token(DROP)) return true;
    if (jj_scan_token(CLASS)) return true;
    if (jj_3R_classname_312_4_20()) return true;
    return false;
  }

  private boolean jj_3_16()
 {
    if (jj_3R_attr_326_4_18()) return true;
    if (jj_scan_token(EQUAL)) return true;
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_15()
 {
    if (jj_3R_attr_326_4_18()) return true;
    if (jj_scan_token(EQUAL)) return true;
    if (jj_scan_token(INT)) return true;
    return false;
  }

  private boolean jj_3_9()
 {
    if (jj_scan_token(CREATE)) return true;
    if (jj_3R_uniondeputy_278_5_14()) return true;
    return false;
  }
